--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@heroicons/vue": "^2.0.18"
     }
 }
